// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> DoubleColorWithoutIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1h8d2es MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Primary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1o06irj MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> PrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1xtt0zg MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-k5ep0s MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedPrimaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1j63p3f MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1t2c090 MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> RoundedSecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1wodird MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Secondary story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-13iokak MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> SecondaryWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-kd5d8t MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> Test story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1o06irj MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  data-testid="tags"
  role="button"
  tabindex="0"
>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;

exports[`<Tag /> TripleColorWithIcon story renders snapshot 1`] = `
<div
  class="MuiButtonBase-root MuiChip-root css-1cokqio MuiChip-colorPrimary MuiChip-clickableColorPrimary MuiChip-clickable"
  role="button"
  tabindex="0"
>
  <div
    class="css-jbvua0"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root css-1i7v7tv"
      data-jest-file-name="IconCheckCircleLarge.svg"
      data-jest-svg-name="IconCheckCircleLarge"
      data-testid="IconCheckCircleLarge"
      fillcontrast="white"
      focusable="false"
      viewBox="0 0 32 32"
    />
  </div>
  <span
    class="MuiChip-label"
  >
    Label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</div>
`;
